Create Manager and GoogleMaps

--- a/PropertyManagementApp/Views/Locations/Index.cshtml
+++ b/PropertyManagementApp/Views/Locations/Index.cshtml
@@ -16,7 +16,10 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.StreetNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StreetName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.City)
@@ -45,7 +48,10 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Address)
+            @Html.DisplayFor(modelItem => item.StreetNumber)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StreetName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.City)
