--- a/PropertyManagementApp/Views/Locations/Buildings.cshtml
+++ b/PropertyManagementApp/Views/Locations/Buildings.cshtml
@@ -1,15 +1,12 @@
 ﻿@model IEnumerable<PropertyManagementApp.Models.Locations>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Buildings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Buildings</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -32,12 +29,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Lat)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Long)
         </th>
         <th></th>
     </tr>
@@ -66,16 +57,7 @@
             @Html.DisplayFor(modelItem => item.PhoneNumber)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Lat)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Long)
-        </td>
-        <td>
-            @*@Html.ActionLink("See On Map", "Maps", "Home") <br />*@
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) <br />
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) <br />
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("See On Map", "Maps", "Home")
         </td>
     </tr>
 }
