--- a/PropertyManagementApp/Views/ServiceRequests/Create.cshtml
+++ b/PropertyManagementApp/Views/ServiceRequests/Create.cshtml
@@ -65,40 +65,40 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ContractorUsed, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.HiddenFor(model => model.ContractorUsed, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ContractorUsed, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ContractorUsed, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ContractorUsed, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FollowUpNeeded, htmlAttributes: new { @class = "control-label col-md-2" })
+        @*<div class="form-group">
+            @Html.HiddenFor(model => model.FollowUpNeeded, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.FollowUpNeeded)
+                    @Html.HiddenFor(model => model.FollowUpNeeded)
                     @Html.ValidationMessageFor(model => model.FollowUpNeeded, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Completed, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.HiddenFor(model => model.Completed, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Completed)
+                    @Html.HiddenFor(model => model.Completed)
                     @Html.ValidationMessageFor(model => model.Completed, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateCompleted, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.HiddenFor(model => model.DateCompleted, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateCompleted, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.DateCompleted, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateCompleted, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
