--- a/PropertyManagementApp/Views/ServiceRequests/Create.cshtml
+++ b/PropertyManagementApp/Views/ServiceRequests/Create.cshtml
@@ -57,6 +57,7 @@
         </div>
 
         <div class="form-group">
+            @* Set date to today automatically *@
             @Html.LabelFor(model => model.DateSubmitted, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateSubmitted, new { htmlAttributes = new { @class = "form-control" } })
@@ -64,13 +65,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.HiddenFor(model => model.ContractorUsed, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.HiddenFor(model => model.ContractorUsed, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ContractorUsed, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         @*<div class="form-group">
             @Html.HiddenFor(model => model.FollowUpNeeded, htmlAttributes: new { @class = "control-label col-md-2" })
