--- a/PropertyManagementApp/Views/Shared/_Layout.cshtml
+++ b/PropertyManagementApp/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Our Buildings", "Buildings", "Locations")</li>
+                    <li>@Html.ActionLink("View Vacancies", "ViewVacancies", "Vacancies")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
