Add messages controller, create variables in mailgun

--- a/PropertyManagementApp/Views/Residents/Welcome.cshtml
+++ b/PropertyManagementApp/Views/Residents/Welcome.cshtml
@@ -7,18 +7,24 @@
 
 <h2>@ViewBag.Title</h2>
 
-<div class="container">
+<div class="container ">
     <div class="row">
-        <div class="col-md-5 col-md-offset-1 table-bordered">
+        <div class="col-md-6 table-bordered">
             <h4><a href="~/ServiceRequests/Create">Submit a Service Request</a></h4>
         </div>
-        <div class="col-md-5 table-bordered">
-            <h4><a href="">Send an Email</a></h4>
+        <div class="col-md-6 table-bordered">
+            <h4>Pay Rent</h4>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-5 col-md-offset-1 table-bordered">
-            <h4>Pay Rent</h4>
+        <div class="col-md-4 table-bordered">
+            <h4><a href="">Email the Manager</a></h4>
+        </div>
+        <div class="col-md-4 table-bordered">
+            <h4><a href="">Email a Neighbor</a></h4>
+        </div>
+        <div class="col-md-4 table-bordered">
+            <h4><a href="">Email All Your Neighbors</a></h4>
         </div>
     </div>
 </div>
