Message sends to manager perfectly

--- a/PropertyManagementApp/Views/Residents/Welcome.cshtml
+++ b/PropertyManagementApp/Views/Residents/Welcome.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="row">
         <div class="col-md-4 table-bordered">
-            <h4><a href="">Email the Manager</a></h4>
+            <h4><a href="~/Messages/SendToManager">Email the Manager</a></h4>
         </div>
         <div class="col-md-4 table-bordered">
             <h4><a href="">Email a Neighbor</a></h4>
