--- a/PropertyManagementApp/Views/Manager/Index.cshtml
+++ b/PropertyManagementApp/Views/Manager/Index.cshtml
@@ -27,7 +27,7 @@
      </div>
     <div class="row">
         <div class="col-md-5 col-md-offset-1 table-bordered">
-            <h4>Post Vacancies</h4>
+            <h4><a href="~/Vacancies/Index">Manage Vacancies</a></h4>
         </div>
     </div>
 </div>
