Send from manager to building, send from resident to resident

--- a/PropertyManagementApp/Views/Manager/Index.cshtml
+++ b/PropertyManagementApp/Views/Manager/Index.cshtml
@@ -10,18 +10,23 @@
 <h2>@ViewBag.Title</h2>
 <div class="container">
     <div class="row">
-        <div class="col-md-5 col-md-offset-1 table-bordered">
+        <div class="col-md-6 table-bordered">
             <h4><a href="~/ServiceRequests">Units Currently Needing Service</a></h4>
         </div>
-        <div class="col-md-5 table-bordered">
+        <div class="col-md-6 table-bordered">
             <h4><a href="~/PreferredServiceProviders">Service Providers</a></h4>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-5 col-md-offset-1 table-bordered">
-            <h4>Send Email</h4>
+        <div class="col-md-4 table-bordered">
+            <h4><a href="~/Messages/SendMessageFromManagerToResident">Send Email to a Resident</a></h4>
         </div>
-        <div class="col-md-5 table-bordered">
+
+        <div class="col-md-4 table-bordered">
+            <h4><a href="~/Messages/SendFromManagerToBuilding">Send Email to a Building</a></h4>
+        </div>
+
+        <div class="col-md-4 table-bordered">
             <h4>Payments</h4>
         </div>
      </div>
