--- a/PropertyManagementApp/Views/Residents/Welcome.cshtml
+++ b/PropertyManagementApp/Views/Residents/Welcome.cshtml
@@ -21,7 +21,7 @@
             <h4><a href="~/Messages/SendToManager">Email the Manager</a></h4>
         </div>
         <div class="col-md-4 table-bordered">
-            <h4><a href="">Email a Neighbor</a></h4>
+            <h4><a href="~/Messages/SendFromResidentToResident">Email a Neighbor</a></h4>
         </div>
         <div class="col-md-4 table-bordered">
             <h4><a href="">Email All Your Neighbors</a></h4>
