--- a/PropertyManagementApp/Views/Messages/SendFromManagerToBuilding.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendFromManagerToBuilding.cshtml
@@ -1,11 +1,11 @@
 ﻿@model PropertyManagementApp.Models.Messages
 
 @{
-    ViewBag.Title = "SendToManager";
+    ViewBag.Title = "SendFromManagerToBuilding";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to the Manager</h2>
+<h2>SendFromManagerToBuilding</h2>
 
 @using (Html.BeginForm())
 {
@@ -15,29 +15,29 @@
         <h4>Messages</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.Label("Your Name", htmlAttributes: new { @class = "control-label col-md-2"})
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.Resident, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Resident, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Resident, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BuildingName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BuildingName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BuildingName, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.BuildingName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BuildingName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BuildingName, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Unit, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor( model => model.Unit, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Unit, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            @*<div class="form-group">
+                @Html.LabelFor(model => model.Unit, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Unit, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Unit, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -60,5 +60,5 @@
                 <input type="submit" value="Send Message" class="btn btn-default" />
             </div>
         </div>
-        </div>
+    </div>
 }
