--- a/PropertyManagementApp/Views/Messages/SendMessageFromManagerToResident.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendMessageFromManagerToResident.cshtml
@@ -1,11 +1,11 @@
 ﻿@model PropertyManagementApp.Models.Messages
 
 @{
-    ViewBag.Title = "SendToManager";
+    ViewBag.Title = "SendMessageFromManagerToResident";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Send a Message to the Manager</h2>
+<h2>Send a Message to a Resident</h2>
 
 @using (Html.BeginForm())
 {
@@ -16,14 +16,14 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.Label("Your Name", htmlAttributes: new { @class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.Resident, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Resident, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Resident, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.BuildingName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.BuildingName, new { htmlAttributes = new { @class = "form-control" } })
@@ -34,10 +34,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Unit, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor( model => model.Unit, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Unit, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Unit, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -60,5 +60,6 @@
                 <input type="submit" value="Send Message" class="btn btn-default" />
             </div>
         </div>
-        </div>
+    </div>
 }
+
