Add rent and payment to Residents model

--- a/PropertyManagementApp/Views/Residents/PayRent.cshtml
+++ b/PropertyManagementApp/Views/Residents/PayRent.cshtml
@@ -1,4 +1,57 @@
-﻿@model PropertyManagementApp.Models.Resident
+﻿<!DOCTYPE html>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+</head>
+<body>
+    <h1>Payment</h1>
+    <div id="paypal-button-container"></div>
+    <script>
+        paypal.Button.render({
+
+            env: 'sandbox', // sandbox | production
+
+            // PayPal Client IDs - replace with your own
+            // Create a PayPal app: https://developer.paypal.com/developer/applications/create
+            client: {
+                sandbox: 'AeiUaPNJ9conLMXDfQjqCysR4nYtigdEM56yGe_nOcgHEq3C97NoGitn1Z2zTOhYsCBxBcC7rOE2HiLm',
+                production: '<insert production client id>'
+            },
+
+            // Show the buyer a 'Pay Now' button in the checkout flow
+            commit: true,
+
+            // payment() is called when the button is clicked
+            payment: function (data, actions) {
+
+                // Make a call to the REST api to create the payment
+                return actions.payment.create({
+                    payment: {
+                        transactions: [
+                            {
+                                amount: { total: '0.01', currency: 'USD' }
+                            }
+                        ]
+                    }
+                });
+            },
+
+            // onAuthorize() is called when the buyer approves the payment
+            onAuthorize: function (data, actions) {
+
+                // Make a call to the REST api to execute the payment
+                return actions.payment.execute().then(function () {
+                    window.alert('Payment Complete!');
+                });
+            }
+
+        }, '#paypal-button-container');
+
+    </script>
+</body>
+
+@*@model PropertyManagementApp.Models.Resident
 
 @{
     ViewBag.Title = "PayRent";
@@ -17,7 +70,7 @@
             </td>
             </tr>
         </table>
-        <!-- PayPal Logo -->*@
+        <!-- PayPal Logo -->
 
     <div id="paypal-button-container"></div>
     <script>
@@ -63,4 +116,4 @@
         }, '#paypal-button-container');
 
     </script>
-</body>
+</body>*@
