Remove paypal stuff from files

--- a/PropertyManagementApp/Views/Residents/PayRent.cshtml
+++ b/PropertyManagementApp/Views/Residents/PayRent.cshtml
@@ -1,119 +1,9 @@
-﻿<!DOCTYPE html>
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
-</head>
-<body>
-    <h1>Payment</h1>
-    <div id="paypal-button-container"></div>
-    <script>
-        paypal.Button.render({
-
-            env: 'sandbox', // sandbox | production
-
-            // PayPal Client IDs - replace with your own
-            // Create a PayPal app: https://developer.paypal.com/developer/applications/create
-            client: {
-                sandbox: 'AeiUaPNJ9conLMXDfQjqCysR4nYtigdEM56yGe_nOcgHEq3C97NoGitn1Z2zTOhYsCBxBcC7rOE2HiLm',
-                production: '<insert production client id>'
-            },
-
-            // Show the buyer a 'Pay Now' button in the checkout flow
-            commit: true,
-
-            // payment() is called when the button is clicked
-            payment: function (data, actions) {
-
-                // Make a call to the REST api to create the payment
-                return actions.payment.create({
-                    payment: {
-                        transactions: [
-                            {
-                                amount: { total: '0.01', currency: 'USD' }
-                            }
-                        ]
-                    }
-                });
-            },
-
-            // onAuthorize() is called when the buyer approves the payment
-            onAuthorize: function (data, actions) {
-
-                // Make a call to the REST api to execute the payment
-                return actions.payment.execute().then(function () {
-                    window.alert('Payment Complete!');
-                });
-            }
-
-        }, '#paypal-button-container');
-
-    </script>
-</body>
-
-@*@model PropertyManagementApp.Models.Resident
+﻿@model PropertyManagementApp.Models.Resident
 
 @{
-    ViewBag.Title = "PayRent";
+    ViewBag.Title = "Pay Rent";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<body>
-    <h2>Pay Rent</h2>
-
-    @* Now accepting paypal badge *@
-
-    @*<!-- PayPal Logo -->
-        <table border="0" cellpadding="10" cellspacing="0" align="center">
-            <tr>
-            <td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/logo/bdg_now_accepting_pp_2line_w.png" border="0" alt="Now Accepting PayPal"></a><div style="text-align:center"><a href="https://www.paypal.com/webapps/mpp/how-paypal-works"><font size="2" face="Arial" color="#0079CD">How PayPal Works</font></a></div>
-            </td>
-            </tr>
-        </table>
-        <!-- PayPal Logo -->
-
-    <div id="paypal-button-container"></div>
-    <script>
-        paypal.Button.render({
-
-            env: 'sandbox', // sandbox | production
-
-            // PayPal Client IDs - replace with your own
-            // Create a PayPal app: https://developer.paypal.com/developer/applications/create
-            
-            client: {
-                sandbox: 'AeiUaPNJ9conLMXDfQjqCysR4nYtigdEM56yGe_nOcgHEq3C97NoGitn1Z2zTOhYsCBxBcC7rOE2HiLm',
-                production: '<insert production client id>'
-            },
-
-            // Show the buyer a 'Pay Now' button in the checkout flow
-            commit: true,
-
-            // payment() is called when the button is clicked
-            payment: function (data, actions) {
-
-                // Make a call to the REST api to create the payment
-                return actions.payment.create({
-                    payment: {
-                        transactions: [
-                            {
-                                amount: { total: '0.01', currency: 'USD' }
-                            }
-                        ]
-                    }
-                });
-            },
-
-            // onAuthorize() is called when the buyer approves the payment
-            onAuthorize: function (data, actions) {
-
-                // Make a call to the REST api to execute the payment
-                return actions.payment.execute().then(function () {
-                    window.alert('Payment Complete!');
-                });
-            }
-
-        }, '#paypal-button-container');
-
-    </script>
-</body>*@
+    <h2>Payment</h2>
+    
