--- a/PropertyManagementApp/Views/Residents/Index.cshtml
+++ b/PropertyManagementApp/Views/Residents/Index.cshtml
@@ -22,6 +22,9 @@
             @Html.DisplayNameFor(model => model.Unit)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Rent)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.EmailAddress)
         </th>
         <th></th>
@@ -38,6 +41,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Unit)
         </td>
+        <th>
+            @Html.DisplayFor(modelItem => item.Rent)
+        </th>
         <td>
             @Html.DisplayFor(modelItem => item.EmailAddress)
         </td>
