--- a/PropertyManagementApp/Views/Vacancies/ViewVacancies.cshtml
+++ b/PropertyManagementApp/Views/Vacancies/ViewVacancies.cshtml
@@ -33,8 +33,8 @@
             @Html.DisplayFor(modelItem => item.PhoneNumber)
         </td>
         <td>
-            @Html.ActionLink("See On Map", "Maps", "Home")
-            @* create link to inquire/email *@
+            @Html.ActionLink("See On Map", "Maps", "Home") | 
+            @Html.ActionLink("Email the Manager about a Unit", "Create", "AvailableUnitInfoRequests")
         </td>
     </tr>
 }
