Update and hide api key in Home/Maps

--- a/PropertyManagementApp/Views/Home/Maps.cshtml
+++ b/PropertyManagementApp/Views/Home/Maps.cshtml
@@ -1,4 +1,4 @@
-﻿<script src="http://maps.google.com/maps/api/js?key=AIzaSyDBQ0bI2v5FnfmC4o7RgWX9af9u03U-PDU" type="text/javascript"></script>
+﻿<script src='@string.Format("https://maps.google.com/maps/api/js?key={0}", Credentials.GeoCodeApiKey)',type="text/javascript"></script>
 
 
 <style>
