--- a/PropertyManagementApp/Views/Manager/Index.cshtml
+++ b/PropertyManagementApp/Views/Manager/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*TODO: Need links to send email, view payments, and post vacancies - post vacancies through Locations/Vacancies view somehow?*@
+@*TODO: Need links to view payments.*@
 
 <h2>@ViewBag.Title</h2>
 <div class="container">
