--- a/PropertyManagementApp/Views/Home/Index.cshtml
+++ b/PropertyManagementApp/Views/Home/Index.cshtml
@@ -1,31 +1,30 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<div style="background:url(../../img/Pritzlaff.jpg) no-repeat center center; background-size: 100%; margin-top: 50px; padding:20px;">
+        <div class="row">
+            <h1 style="color: inherit; background-color: rgba(255, 255, 255, .95);border-radius: 25px;" class="text-center col-md-4 col-md-offset-4">Elegant Apartment Homes</h1>
+        </div>
+        <div class="row">
+             <h3 class="text-center col-md-8 col-md-offset-2"  style="margin-bottom: 15px;border-radius: 25px; background-color: rgba(255, 255, 255, 0.80);">Find your new home in one of our locations near Milwaukee's Third Ward.</h3> 
+        </div>
+        <div class="row">
+             <p class="col-md-2 col-md-offset-5"><a href="https://asp.net" class="btn btn-primary btn-lg center-block " style="border:thin solid white">Learn more &raquo;</a></p>
+        </div>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        <div class="row" >
+            <div class="col-md-5" style="background-color: rgba(255, 255, 255, 0.80); border-radius: 25px;padding: 5px;" >
+                <h3 class="text-center">Looking for a new home?</h3>
+                <p><a class="btn btn-link col-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>View Our Vacancies</a></p>
+            </div>
+            <div class="col-md-5" style="background-color: rgba(255, 255, 255, 0.80); border-radius: 25px;">
+                <h3 class="text-center">Are you a resident?</h3>
+                <p><a class="btn btn-link col-md-6 col-md-offset-3"" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>Log in here</a></p>
+            </div>
+            @*<div class="col-md-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;margin: 20px;">
+                <h3 class="text-center">Looking for a new home?</h3>
+                <p><a class="btn btn-linkcol-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>View Our Vacancies</a></p>
+            </div>*@
+       </div>
 </div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
 </div>
