--- a/PropertyManagementApp/Views/Shared/_Layout.cshtml
+++ b/PropertyManagementApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                     <li>@Html.ActionLink("View Vacancies", "ViewVacancies", "Vacancies")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("Actions", "Manager", "Welcome")</li>
+                    <li>@Html.ActionLink("Actions", "Welcome", "Residents")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
