--- a/PropertyManagementApp/Views/Residents/EnterPaymentAmount.cshtml
+++ b/PropertyManagementApp/Views/Residents/EnterPaymentAmount.cshtml
@@ -66,6 +66,14 @@
         </div>
 
         <div class="form-group">
+            @Html.HiddenFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*<div class="col-md-10">
+                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+            </div>*@
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Enter Payment Amount" class="btn btn-default" />
             </div>
