--- a/PropertyManagementApp/Views/Residents/Welcome.cshtml
+++ b/PropertyManagementApp/Views/Residents/Welcome.cshtml
@@ -12,8 +12,9 @@
         <div class="col-md-6 table-bordered">
             <h4><a href="~/ServiceRequests/Create">Submit a Service Request</a></h4>
         </div>
-        <div class="col-md-6 table-bordered">@* paypal link *@
-            <h4><a href="PayRent">Pay Rent</a></h4>
+        <div class="col-md-6 table-bordered">
+            @*<h4>@Html.ActionLink("Pay Rent", "PayRent", new { id = Model.Id })</h4>*@
+            <h4><a href="PayRent/@ViewBag.User">Pay Rent</a></h4>
         </div>
     </div>
     <div class="row">
