--- a/PropertyManagementApp/Views/Residents/MakePayment.cshtml
+++ b/PropertyManagementApp/Views/Residents/MakePayment.cshtml
@@ -5,13 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value="Set Payment" class="btn btn-default" />
-    </div>
-</div>*@
-
-
 <h2>Payment</h2>
 <form action="/Home/PayRent" method="POST">
     <article>
@@ -21,9 +14,19 @@
                 </article>
                 <script src="//checkout.stripe.com/v2/checkout.js"
                         class="stripe-button"
-                        data-key="@Credentials.StripePublishableKey"
+                        data-key=@Credentials.StripePublishableKey
                         data-locale="auto"
                         data-description="Rent Payment"
-                        data-amount="@ViewBag.StripePmt">
+                        data-amount="@ViewBag.StripePmt"
+                        data-image="https://stripe.com/img/documentation/checkout/marketplace.png">
                 </script>
             </form>
+
+
+@*src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_TAfhpFmv9S0yNl86vUauVwp4"
+    data-amount="999"
+    data-name="jenniferlocke.work"
+    data-description="Widget"
+    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+    data-locale="auto">*@
