Manager links complete

--- a/PropertyManagementApp/Views/Shared/_Layout.cshtml
+++ b/PropertyManagementApp/Views/Shared/_Layout.cshtml
@@ -21,13 +21,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                     <li>@Html.ActionLink("Our Buildings", "Buildings", "Locations")</li>
                     <li>@Html.ActionLink("View Vacancies", "ViewVacancies", "Vacancies")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    @*<li>@Html.ActionLink("Actions", "Manager", "Welcome")</li>
-                    <li>@Html.ActionLink("Actions", "Welcome", "Residents")</li>*@
+                    
+                    <li>@Html.ActionLink("Manager Home Page", "Index", "Manager")</li>
+                    <li>@Html.ActionLink("Resident Home Page", "Welcome", "Residents")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
