--- a/PropertyManagementApp/Views/Manager/Index.cshtml
+++ b/PropertyManagementApp/Views/Manager/Index.cshtml
@@ -27,7 +27,7 @@
         </div>
 
         <div class="col-md-4 table-bordered">
-            <h4>Payments</h4>
+            <h4><a href="https://dashboard.stripe.com/test/payments">Payments</a></h4>
         </div>
      </div>
     <div class="row">
