--- a/PropertyManagementApp/Views/Home/Maps.cshtml
+++ b/PropertyManagementApp/Views/Home/Maps.cshtml
@@ -43,9 +43,7 @@
 
         // This makes the div with id "map_canvas" a google map
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-
-        // a sample list of JSON encoded data of places 
-        // you can either make up a JSON list server side, or call it from a controller using JSONResult
+        
         var data = [
             {
                 "Id": 1, "PlaceName": "Mitchell On Water", "GeoLat": "43.0330517", "GeoLong": "-87.9088048"
@@ -54,25 +52,22 @@
                 "Id": 2, "PlaceName": "DoMUS Apartments", "GeoLat": "43.0291769", "GeoLong": "-87.90456449999999"
             },
             {
-                "Id": 3, "PlaceName": "Pritzlaff Lofts",/* TODO: Customize appearance of popup "Address":"313 N Plankinton Ave\nMilwaukee, WI 53203",*/ "GeoLat": "43.0342677", "GeoLong": "-87.9114481"
+                "Id": 3, "PlaceName": "Pritzlaff Lofts", "GeoLat": "43.0342677", "GeoLong": "-87.9114481"
             },
         ];
-
-        // Using the JQuery "each" selector to iterate through the JSON list and drop marker pins
+        
         $.each(data, function (i, item) {
             var marker = new google.maps.Marker({
-                'position': new google.maps.LatLng(item.GeoLong, item.GeoLat),
+                'position': new google.maps.LatLng(item.GeoLat, item.GeoLong),
                 'map': map,
-                'title': item.PlaceName,
-                'address': item.Address
+                'title': item.PlaceName
             });
-
-            // Make the marker-pin blue!
+            
             marker.setIcon('http://maps.google.com/mapfiles/ms/icons/green-dot.png')
 
             // put in some information about each json object - in this case, the opening hours.
             var infowindow = new google.maps.InfoWindow({
-                content: "<div class='infoDiv'><h2>" + item.PlaceName + "</div></div>"
+                content: "<h4>" + item.PlaceName + "</h4>"
             });
 
             // finally hook up an "OnClick" listener to the map so it pops up out info-window when the marker-pin is clicked!
