Clean up view files

--- a/PropertyManagementApp/Views/Home/Index.cshtml
+++ b/PropertyManagementApp/Views/Home/Index.cshtml
@@ -19,12 +19,11 @@
             </div>
             <div class="col-md-5" style="background-color: rgba(255, 255, 255, 0.80); border-radius: 25px;">
                 <h3 class="text-center">Are you a resident?</h3>
-                <p><a class="btn btn-link col-md-6 col-md-offset-3"" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>Log in here</a></p>
+                <p><a class="btn btn-link col-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>Log in here</a></p>
             </div>
             @*<div class="col-md-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;margin: 20px;">
                 <h3 class="text-center">Looking for a new home?</h3>
                 <p><a class="btn btn-linkcol-md-6 col-md-offset-3" style="background-color: rgba(255, 255, 255, 0.80);border-radius: 25px;" href=../Vacancies/ViewVacancies>View Our Vacancies</a></p>
             </div>*@
        </div>
-</div>
 </div>
