--- a/PropertyManagementApp/Views/Home/Contact.cshtml
+++ b/PropertyManagementApp/Views/Home/Contact.cshtml
@@ -5,13 +5,10 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    313 N Plankinton Ave<br />
+    Milwaukee, WI 53203<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    414.555.0000
 </address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+>
