--- a/PropertyManagementApp/Views/Home/PayRent.cshtml
+++ b/PropertyManagementApp/Views/Home/PayRent.cshtml
@@ -4,6 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Charge</h2>
-<h2>You successfully paid <strong>$5.00</strong></h2>
+    <h2>Charge</h2>
+    <h2>Your payment was successful. You will receive an email receipt shortly.</h2>
 
