--- a/PropertyManagementApp/Views/Messages/SendFromResidentToBuilding.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendFromResidentToBuilding.cshtml
@@ -1,18 +1,17 @@
 ﻿@model PropertyManagementApp.Models.Messages
 
 @{
-    ViewBag.Title = "SendFromResidentToBuilding";
+    ViewBag.Title = "Send a Message to Your Building";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>SendFromResidentToBuilding</h2>
+<h2>Send a Message to Your Building</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Messages</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
