--- a/PropertyManagementApp/Views/Messages/SendToManager.cshtml
+++ b/PropertyManagementApp/Views/Messages/SendToManager.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PropertyManagementApp.Models.Messages
 
 @{
-    ViewBag.Title = "SendToManager";
+    ViewBag.Title = "Send a Message to the Manager";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Messages</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
